--- a/app/src/main/res/layout/activity_first.xml
+++ b/app/src/main/res/layout/activity_first.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:text="Why is everyone pagal?"
+        android:text="What's Square of 12?"
         android:textSize="30sp" />
 
     <Button
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:text="Sab Paga;!" />
+        android:text="144" />
 
     <Button
         android:id="@+id/b3"
@@ -29,7 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/b4"
         android:layout_alignParentStart="true"
-        android:text="Tero Kutta Pagal" />
+        android:text="24" />
 
     <Button
         android:id="@+id/b2"
@@ -37,7 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/b3"
         android:layout_alignParentStart="true"
-        android:text="Teri Sasu Pagal" />
+        android:text="1212" />
 
     <Button
         android:id="@+id/b1"
@@ -45,5 +45,5 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/b2"
         android:layout_alignParentStart="true"
-        android:text="Tu Pagal" />
+        android:text="1441" />
 </RelativeLayout>
